Fixing subnav to be aligned with parent

--- a/wp-content/themes/abt-core-custom/css/scss/layouts/_header.scss
+++ b/wp-content/themes/abt-core-custom/css/scss/layouts/_header.scss
@@ -584,10 +584,10 @@
 
 
       @include media($desktop){
-        position: absolute;
+        position: relative;
         top: 10px;
         text-align: right;
-        padding-right: 110px;
+        padding-right: 150px;
         right: 100%;
       }
 
